avoid overlap

--- a/src/components/reviews/review.css
+++ b/src/components/reviews/review.css
@@ -24,6 +24,7 @@
     align-items: center;
     margin-bottom: 30px;
     margin-left: 20px;
+    margin-top: 20px;
 }
 
 .review {
@@ -54,6 +55,7 @@ input {
     background-color: #f8f8f8;
     font-size: 20px;
     margin-left: 20px;
+    margin-top: 20px;
 }
 
 .sideBySideSubmit {
